--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4",
     "antd": "^3.11.0",
+    "express": "^4.16.4",
     "postcss-loader": "^3.0.0",
     "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "react-dom": "^16.6.3",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
@@ -40,6 +42,7 @@
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "node-sass": "^4.10.0",
+    "redux-devtools": "^3.5.0",
     "sass": "^1.15.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
