--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "webpack-dev-server --color --procsee --open",
-    "start-server": "node ./server/index.js"
+    "start": "node ./server/index.js"
   },
   "keywords": [],
   "author": "",
@@ -48,7 +47,6 @@
     "style-loader": "^0.23.1",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10",
     "webpack-hot-middleware": "^2.24.3"
   }
 }
