--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node ./server/index.js"
+    "start-dev-api": "nodemon ./server/index.js",
+    "start": "npm run start-dev-api"
   },
   "keywords": [],
   "author": "",
@@ -41,6 +42,7 @@
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "node-sass": "^4.10.0",
+    "nodemon": "^1.18.9",
     "redux-devtools": "^3.5.0",
     "sass": "^1.15.1",
     "sass-loader": "^7.1.0",
