--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start-dev-api": "nodemon ./server/index.js",
-    "start": "npm run start-dev-api"
+    "watch-client": "cross-env NODE_ENV=development node ./server/index.js",
+    "start-dev-api": "nodemon --watch server/api server/api/index.js",
+    "start": "npm run watch-client & npm run start-dev-api",
+    "build": ""
   },
   "keywords": [],
   "author": "",
@@ -28,6 +30,7 @@
     "babel-loader": "^8.0.4",
     "babel-plugin-import": "^1.11.0",
     "clean-webpack-plugin": "^1.0.0",
+    "cross-env": "^5.2.0",
     "css-loader": "^1.0.1",
     "css-module": "^1.1.4",
     "eslint": "^5.9.0",
