--- a/.babelrc
+++ b/.babelrc
@@ -14,6 +14,9 @@
       ],
       [
         "@babel/plugin-proposal-class-properties"
+      ],
+      [
+        "@babel/plugin-transform-runtime"
       ]
     ]
 }
