--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "watch-client": "cross-env NODE_ENV=development node ./server/index.js",
     "start-dev-api": "nodemon --watch server/api server/api/index.js",
-    "start": "concurrently \"npm:watch-client\" \"npm:start-dev-api\""
+    "start": "npm run watch-client & npm run start-dev-api"
   },
   "keywords": [],
   "author": "",
@@ -42,7 +42,6 @@
     "babel-loader": "^8.0.4",
     "babel-plugin-import": "^1.11.0",
     "clean-webpack-plugin": "^1.0.0",
-    "concurrently": "^4.1.0",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.1",
     "css-module": "^1.1.4",
