--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "watch-client": "cross-env NODE_ENV=development node ./server/index.js",
-    "start-dev-api": "nodemon --watch server/api server/api/index.js",
-    "start": "npm run watch-client & npm run start-dev-api"
+    "start-dev-api": "forever --killSignal=SIGTERM -w --watchDirectory server/api server/api/index.js",
+    "start": "concurrently --raw --kill-others npm:watch-client npm:start-dev-api"
   },
   "keywords": [],
   "author": "Wendy",
@@ -42,6 +42,7 @@
     "babel-loader": "^8.0.4",
     "babel-plugin-import": "^1.11.0",
     "clean-webpack-plugin": "^1.0.0",
+    "concurrently": "^4.1.0",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.1",
     "css-module": "^1.1.4",
@@ -52,6 +53,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
     "file-loader": "^2.0.0",
+    "forever": "^0.15.3",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.3.1",
     "less": "^3.9.0",
