--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.18.0",
     "bluebird": "^3.5.3",
     "body-parser": "^1.18.3",
+    "connect-history-api-fallback": "^1.6.0",
     "cookie-parser": "^1.4.3",
     "cookies": "^0.7.3",
     "express": "^4.16.4",
