--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "http-proxy": "^1.17.0",
     "mongoose": "^5.4.2",
     "react": "^16.6.3",
+    "react-addons-pure-render-mixin": "^15.6.2",
     "react-dom": "^16.6.3",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
