--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "express-session": "^1.15.6",
     "http-proxy": "^1.17.0",
     "mongoose": "^5.4.2",
+    "rc-queue-anim": "^1.6.11",
+    "rc-tween-one": "^2.3.2",
     "react": "^16.6.3",
     "react-addons-pure-render-mixin": "^15.6.2",
     "react-dom": "^16.6.3",
