--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "connect-history-api-fallback": "^1.6.0",
     "cookie-parser": "^1.4.3",
     "cookies": "^0.7.3",
+    "dateformat": "^3.0.3",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "http-proxy": "^1.17.0",
