--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "http-proxy": "^1.17.0",
+    "moment": "^2.24.0",
     "mongoose": "^5.4.2",
     "rc-queue-anim": "^1.6.11",
     "rc-tween-one": "^2.3.2",
