--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "redux-devtools": "^3.5.0",
     "sass": "^1.15.1",
     "sass-loader": "^7.1.0",
+    "simditor": "^2.3.23",
     "style-loader": "^0.23.1",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
