--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "simditor": "^2.3.23",
     "style-loader": "^0.23.1",
     "webpack": "^4.26.1",
+    "webpack-bundle-analyzer": "^3.2.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.5.0",
     "webpack-hot-middleware": "^2.24.3"
