--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
-    "redux-saga": "^0.16.2"
+    "redux-saga": "^0.16.2",
+    "webpack-bundle-analyzer": "^3.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
